--- a/templates/accounts/notifications.html
+++ b/templates/accounts/notifications.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load humanize %}
 
+{% block title %}ManReader - Notification{% endblock title %}
+
 {% block content %}
 {% include "includes/header.html" %}
 <div id="main-wrapper">
