--- a/templates/book/search-list.html
+++ b/templates/book/search-list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Search {{ keyword|title }} List
+    ManReader - Search {{ keyword|title }} List
 {% endblock title %}
 
 {% block content %}
