--- a/manReader_main/static/css/style.css
+++ b/manReader_main/static/css/style.css
@@ -4317,6 +4317,168 @@ body.show-comment #read-comment {
     z-index: 110;
 }
 
+
+/* error */
+.container-404 {
+    padding: 200px 0 100px;
+}
+
+.container-404 .c4-big-img {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto 30px;
+}
+
+.container-404 .c4-big-img img {
+    max-height: 200px;
+    max-width: 100%;
+}
+
+.container-404 .c4-medium {
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.2em;
+    margin-bottom: 10px;
+}
+
+.container-404 .c4-small {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.3em;
+    margin-bottom: 30px;
+}
+
+.btn-radius {
+    border-radius: 30px;
+}
+
+/* notification */
+.hr-notifications {
+    display: block;
+    float: left;
+    margin-right: 10px;
+    position: relative;
+}
+
+.hr-notifications .hrn-icon {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 50%;
+    background: rgba(255,255,255,.1);
+    margin: 0 5px;
+    text-align: center;
+    line-height: 40px;
+    position: relative;
+}
+
+.hr-notifications .hrn-icon .number {
+    position: absolute;
+    font-family: Arial;
+    font-weight: 600;
+    top: -5px;
+    right: -10px;
+    height: 20px;
+    border-radius: 10px;
+    line-height: 20px;
+    min-width: 20px;
+    font-size: 12px;
+    padding: 0 3px;
+    color: #fff;
+    background: #f02849;
+}
+
+.hr-notifications .hrn-icon i {
+    font-size: 16px;
+    color: white;
+}
+
+.dropdown-menu-noti.new-noti-list {
+    width: 280px;
+    box-shadow: 0 0 20px rgba(0,0,0,.2);
+    color: #ccc;
+    border: none;
+    padding: 0;
+    border-radius: 6px;
+    overflow: hidden;
+    transform: none!important;
+    top: 100%!important;
+    left: auto!important;
+    right: 0!important;
+    bottom: auto!important;
+}
+
+.new-noti-list .nnl-mark {
+    padding: 10px 15px;
+    background: rgba(0,0,0,.2);
+    overflow: hidden;
+}
+
+.new-noti-list .nnl-mark .btn-xs {
+    font-size: 12px;
+}
+
+.new-noti-list .nnl-item.with-poster {
+    padding-left: 64px;
+    min-height: 78px;
+}
+
+.new-noti-list .nnl-item {
+    border-bottom: 1px solid #4a4d59;
+    display: block;
+    font-size: 12px;
+    line-height: 1.5em;
+    color: #fff;
+    padding: 10px 15px;
+    position: relative;
+}
+
+.new-noti-list .nnl-item .manga-poster {
+    width: 36px;
+    padding-bottom: 0;
+    height: 47px;
+    bottom: 0;
+    position: absolute;
+    left: 15px;
+    top: 15px;
+}
+
+.manga-poster .manga-poster-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.new-noti-list .nnl-item.new strong.manga-name {
+    color: #c49bff;
+}
+
+.new-noti-list .nnl-item strong {
+    font-weight: 500;
+    color: #fff;
+}
+
+.new-noti-list .nnl-item .time {
+    display: block;
+    font-size: 10px;
+    margin-top: 3px;
+    color: #888;
+}
+
+.new-noti-list .nnl-item.nnl-more {
+    opacity: 1;
+    background: #4a4d59!important;
+    color: #fff;
+}
+
+
+
 @media all and (max-width: 240px) {
     #toast-container>div {
         padding:8px 8px 8px 50px;
