--- a/templates/accounts/reading-list.html
+++ b/templates/accounts/reading-list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
 
+{% block title %}ManReader - Reading List{% endblock title %}
+
 {% block content %}
 {% include "includes/header.html" %}
 <div id="main-wrapper">
