--- a/templates/book/az-list.html
+++ b/templates/book/az-list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}ManReader - A-Z List{% endblock title %}
+
 {% block content %}
 {% include "includes/header.html" %}
 <div class="prebreadcrumb">
