--- a/templates/book/filter.html
+++ b/templates/book/filter.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}ManReader - Filter{% endblock title %}
+
 {% block content %}
 {% include "includes/header.html" %}
 
